--- a/ios/SecureTransactionHistory/Info.plist
+++ b/ios/SecureTransactionHistory/Info.plist
@@ -48,5 +48,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>SecureTransactionHistoryFaceID</string>
 </dict>
 </plist>
